# 24-1-D-13

./: CMakeLists.txt  K-Mismatch Algorithm Optimization and Application.docx  README.md
include/: k_mismatch_search.h  mcs.h  type_defs.h
src/: k_mismatch_search.cpp  main.cpp  mcs.cpp  type_defs.cpp
tests/: gen_samples.cpp  gen_samples.h  queries_1.txt  test_main.cpp  text_1.txt  units.cpp  utils.cpp  utils.h
